--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,6 +1,6 @@
 
 <h1>Tell us about your pirate</h1>
-<form action="/pirates" method="post">
+<form action="/pirates" method="POST">
   <h1>Pirate Info</h1>
   <label for="pirate_name">Name</label>
   <input id="pirate_name" type="text" name="pirate[name]"></p>
