--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -18,7 +18,7 @@
   <input id="ship_booty_1" type="text" name="pirate[ships][][booty]">
 
   <h2>Ship 2</h2>
-  <label for="ship_name2">Name</label>
+  <label for="ship_name_2">Name</label>
   <input id="ship_name_2" type="text" name="pirate[ships][][name]">
   <label for="ship_type_2">Type</label>
   <input id="ship_type_2" type="text" name="pirate[ships][][type]">
