--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -25,5 +25,5 @@
   <label for="ship_booty_2">Booty</label>
   <input id="ship_booty_2" type="text" name="pirate[ships][][booty]">
 
-  <input type="submit" name="submit" value="submit">
+  <input type="submit" name="submit" value="Submit">
 </form>
